--- a/src/DeviIO.Business/DevIO.Business.csproj
+++ b/src/DeviIO.Business/DevIO.Business.csproj
@@ -1,12 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Notificacoes\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="fluentvalidation" Version="8.6.2" />
